2007-12-20  Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_GraphvizReportDialog.py:
	* src/plugins/GraphViz.py:
	* src/plugins/GVHourGlass.py:
	* src/BaseDoc.py:
	Various enhancements to the Graphviz report system.
	* src/plugins/GVRelGraph.py: Added - adapted GraphViz.py to use Graphviz 
	report system.

2007-12-20  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/ExportVCard.py: fixed date.get_text() as signal for text
	* src/plugins/ExportVCalendar.py: fixed date.get_text() ditto
	* src/plugins/WriteGeneWeb.py: fixed date.get_text() ditto

2007-12-19  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/GrampsCfg.py: added a warning about duplicate pattern

2007-12-19 Peter Landgren <peter.talken@telai.com>
	* src/DbManager.py: fixed unique rename and new databases 
	* src/RecentFiles.py: fixed unique rename and new databases
			and update of recent-files.xml

2007-12-19 Benny Malengier <benny.malengier@gramps-project.org>
	* src/gen/lib/person.py: sources in attributes of eventref are not seen
		 in ref tables
	* src/gen/lib/eventref.py: can contain sources, add methods for that
	* src/gen/lib/notebase.py: whitespace

2007-12-18  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/Editors/_EditFamily.py: doubleclick now edits; fixed share popup
	* src/DisplayTabs/_EmbeddedList.py: fixed share popup
	* src/DisplayTabs/_GalleryTab.py: fixed share popup

2007-12-18 Gary Burton <gary.burton@zen.co.uk>
	* src/plugins/DetAncestralReport.py: Remove some test code

2007-12-17  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DbManager.py: I was having some weird issues with the archive
	file giving errors about "still in use". With these changes, I haven't
	had it happen... yet. Can't say for certain if these changes fixed it,
	or if there is another cause.

2007-12-17  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/CalculateEstimatedDates.py: Give good defaults for Filter 
	and Enumerated Lists