@@ -1,3 +1,10 @@
+2007-12-20  Raphael Ackermann <raphael.ackermann@gmail.com>
+        * src/glade/gramps.glade : don't use C or O as accelerator keys on Name Editor, reserved for OK and Cancel buttons #1470
+        * src/glade/edit_person.glade : accelerator keys are used double in person editor #1452
+
+2007-12-20  Jerome Rapinat <romjerome@yahoo.fr>
+        * src/Editors/_EditPerson.py : Unspecified gender dialog doesn't have mnemonics #1461
+
 2007-12-20  Brian Matherly <brian@gramps-project.org>
 	* src/ReportBase/_GraphvizReportDialog.py:
 	* src/plugins/GraphViz.py:
